--- a/index.html
+++ b/index.html
@@ -43,8 +43,28 @@
             <header>
                 <img src="img/hotelView.jpg">
                 <h2>Hotel View</h2>
+            
             </header>
-        </aside>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+            </article>
+
+
+            <article class="mijloc">
+                <header>
+                    <img src="img/hotelRoom.jpeg">
+                    <h2>Hotel Room</h2>
+                </header>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+            </article>
+       
+       <article class="dreapta">
+            <header>
+                <img src="img/hotelRestaurant.jpeg">
+                <h2>Hotel Restaurant</h2>
+            </header>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam </p>
+        </article>
+            </aside>
         <footer>
             <p>&copy; 2023 Hotel Nord. All rights reserved.</p>
         </footer>
